--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.utadeo.edu.co/sites/tadeo/files/favicon_utadeo.ico"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Proyecto final del curso IA - Universidad Jorge Tadeo Lozano. Chateo te permite consultar información sobre la UTADEO."
+    />
+    <meta
+      name="keywords"
+      content="chateo, utadeo, chatbot, proyecto final, inteligencia artificial"
+    />
     <link href="/src/index.css" rel="stylesheet" />
-    <title>Chateo - IA</title>
+    <title>Chateo - App</title>
   </head>
   <body>
     <div id="root"></div>
